^ Started work to unify look of all backend managers. Compacted backend items manager. For category manager added column chooser and then added columns/filter toggle buttons making category manager have same look as items manager. TODO all other backend managers.

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -227,7 +227,7 @@ FLEXI_PARAMETERS="Parameters"
 FLEXI_ADD_TYPE="New type"
 
 ; Categories screen
-FLEXI_CATEGORY="Categories"
+FLEXI_CATEGORY="Category"
 FLEXI_ITEMS_ASSIGNED="Items assigned"
 ; Category screen (added beta4)
 FLEXI_COPY_PARAMETERS_SOURCE="Source category"
@@ -2732,6 +2732,7 @@ FLEXI_USE_ACL_TO_HIDE="Use ACL to hide"
 FLEXI_USE_ACL_TO_DISABLE="Use ACL to disable"
 
 ; Category manager
+FLEXI_MAX_DEPTH="Max depth"
 FLEXI_SELECT_MAX_DEPTH="- Select max depth -"
 FLEXI_SELECT_ACCESS_LEVEL="- Select access level -"
 
