+ Added language strings for new side bar / dashboard

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -539,6 +539,7 @@ FLEXI_WARN_NO_FILES_IN_DIR="Either the directory was empty or there wasn't any f
 FLEXI_FILES_COPIED_SUCCESS="%d files added successfuly to the filemanager."
 FLEXI_KEEP_ORIGINAL_FILE="Keep original files"
 FLEXI_KEEP_ORIGINAL_FILE_DESC="You can choose if you want to keep or remove the source files from their original location."
+FLEXI_ITEMS_USING="Items using"
 
 ; Parameter files ##################################
 
@@ -3035,3 +3036,10 @@ FLEXI_CUSTOM_MODULE_PER_ITEM_DESC="You can - try - to customize some module para
 ; Field groups
 FLEXI_USE_IN_FIELD_GROUP="Use field in a group"
 FLEXI_USE_IN_FIELD_GROUP_DESC="Enable to allow field to be part of field group, that is created via 'Field Group' field. NOTE: You should then select this field in ONLY ONE field group"
+
+; Navigation sidebar
+FLEXI_NAV_SD_CONTENT_EDITING="Content editing"
+FLEXI_NAV_SD_CONTENT_VIEWING="Content viewing"
+FLEXI_NAV_SD_TYPES_N_FIELDS="Types & fields"
+FLEXI_NAV_SD_USERS_N_GROUPS="Users & Groups"
+FLEXI_NAV_SD_EXPERT_USAGE="Expert Usage"
