language update for dashboard config

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -812,6 +812,68 @@ FLEXI_FIELD_FIELD_NEW_WINDOW="Open in new window"
 FLEXI_FIELD_FIELD_NEW_WINDOW_DESC="Open the link in a new tab or window (target _blank)"
 ; Integrated plugins parameters (added beta5)
 FLEXI_DISPLAY_PARAMETERS="Display parameters"
+;dashboard option
+DISPLAY_CONTENT_FIELDSET ="Content Fieldset"
+DISPLAY_CONTENT_FIELDSET_DESC ="Hide or show Content Fieldset"
+DISPLAY_CONTENT_ITEMS ="Items"
+DISPLAY_CONTENT_ITEMS_DESC ="Hide or show Items button"
+DISPLAY_CONTENT_ADDITEMS ="Add item"
+DISPLAY_CONTENT_ADDITEMS_DESC ="Hide or show Add item button"
+DISPLAY_CONTENT_CATEGORY="Categories"
+DISPLAY_CONTENT_CATEGORY_DESC="Hide or show Categories button"
+DISPLAY_CONTENT_ADDCATEGORY="Add categorie"
+DISPLAY_CONTENT_ADDCATEGORY_DESC="Hide or show Add categorie button"
+DISPLAY_TYPES_FIELDSET="Types/Fields Fieldset"
+DISPLAY_TYPES_FIELDSET_DESC="Hide or show Types/fields Fieldset"
+DISPLAY_TYPES_TYPES="Types"
+DISPLAY_TYPES_TYPES_DESC="Hide or show Types button"
+DISPLAY_TYPES_ADDTYPES="Add type"
+DISPLAY_TYPES_ADDTYPES_DESC="Hide or show Add type button"
+DISPLAY_TYPES_FIELDS="Fields"
+DISPLAY_TYPES_FIELDS_DESC="Hide or show Fields button"
+DISPLAY_TYPES_ADDFIELDS="Add field"
+DISPLAY_TYPES_ADDFIELDS_DESC="Hide or show Add field button"
+DISPLAY_TYPES_TAGS="Tags"
+DISPLAY_TYPES_TAGS_DESC="Hide or show Tags button"
+DISPLAY_TYPES_ADDTAGS="Add tags"
+DISPLAY_TYPES_ADDTAGS_DESC="Hide or show Add tags button"
+DISPLAY_TYPES_FILES="Files"
+DISPLAY_TYPES_FILES_DESC="Hide or show Files button"
+DISPLAY_CONTENTVIEWING_FIELDSET="Content viewing Fieldset"
+DISPLAY_CONTENTVIEWING_FIELDSET_DESC="Hide or show Content viewing Fieldset"
+DISPLAY_CONTENTVIEWING_TEMPLATES="Templates"
+DISPLAY_CONTENTVIEWING_TEMPLATES_DESC="Hide or show Templates button"
+DISPLAY_CONTENTVIEWING_STATS="Stats"
+DISPLAY_CONTENTVIEWING_STATS_DESC="Hide or show Stats button"
+DISPLAY_USERS_FIELDSET="Users/groups Fieldset"
+DISPLAY_USERS_FIELDSET_DESC="Hide or show Users/groups Fieldset"
+DISPLAY_USERS_USERS="Users"
+DISPLAY_USERS_USERS_DESC="Hide or show Users button"
+DISPLAY_USERS_ADDUSERS="Add user"
+DISPLAY_USERS_ADDUSERS_DESC="Hide or show Add user button"
+DISPLAY_USERS_GROUPS="Groups"
+DISPLAY_USERS_GROUPS_DESC="Hide or show Groups button"
+DISPLAY_USERS_ADDGROUPS="Add group"
+DISPLAY_USERS_ADDGROUPS_DESC="Hide or show Add group button"
+DISPLAY_EXPERT_FIELDSET="Expert Fieldset"
+DISPLAY_EXPERT_FIELDSET_DESC="Hide or show Expert Fieldset"
+DISPLAY_EXPERT_IMPORT="Import"
+DISPLAY_EXPERT_IMPORT="Hide or show Import button"
+DISPLAY_EXPERT_INDEX="Index"
+DISPLAY_EXPERT_INDEX_DESC="Hide or show Index button"
+DISPLAY_EXPERT_PLUGIN="Plugin"
+DISPLAY_EXPERT_PLUGIN_DESC="Hide or show Plugin button"
+DISPLAY_SLIDER_PENDING="Pending slider"
+DISPLAY_SLIDER_PENDING_DESC="Hide or show Pending slider"
+DISPLAY_SLIDER_REVISED="Revised slider"
+DISPLAY_SLIDER_REVISED_DESC="Hide or show Revised slider"
+DISPLAY_SLIDER_INPROGRESS="In Progess slider"
+DISPLAY_SLIDER_INPROGRESS_DESC="Hide or show In Progess slider"
+DISPLAY_SLIDER_DRAFT="Draft slider"
+DISPLAY_SLIDER_DRAFT_DESC="Hide or show Draft slider"
+DISPLAY_SLIDER_VERSION="Version checker"
+DISPLAY_SLIDER_VERSION_DESC="Hide or show Version checker"
+
 
 
 ; Menu parameters ##################################
