^ Finished work for new dashboard, cleaning up the sliders appearance and behaviour, including placing the license into the sliders too

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -819,6 +819,13 @@ FLEXI_DASH_HIDE_BTNS="Hide buttons"
 FLEXI_DASH_HIDE_BTNS_DESC="Note this will hide the buttons. It will not disable ACCESS to the views that buttons point to, use ACL to disable access to particular views"
 FLEXI_DASH_DISABLE_SLIDERS="Disable sliders" 
 FLEXI_DASH_DISABLE_SLIDERS_DESC="Note this will hide the buttons. It will not disable ACCESS to the views that buttons point to, use ACL to disable access to particular views"
+FLEXI_DASH_MODAL_ITEM_EDIT="Edit items in popup window"
+FLEXI_DASH_MODAL_ITEM_EDIT_DESC="Slider item links will open edit form in modal popup window"
+FLEXI_DASH_DISABLE_FC_LOGO="Disable FLEXIcontent logo"
+FLEXI_DASH_DISABLE_FC_LOGO_DESC="You can hide the FLEXIcontent image, the license and copyright text will still be visible"
+FLEXI_DASH_HIDE_FC_LICENSE="Hide FLEXIcontent license"
+FLEXI_DASH_HIDE_FC_LICENSE_DESC="Hide the license by placing it inside the dashboard sliders"
+FLEXI_IN_SLIDER="In slider"
 
 
 ; Menu parameters ##################################
