^ Improved dashboard comments integration, adding configuration for manual comments integration

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -559,8 +559,16 @@ FLEXI_EMAIL_ICON_DESC="Enable emailing current page URL to a friend"
 FLEXI_EMAIL_ICON="Email Icon"
 FLEXI_STATE_ICON_DESC="Enable quick change of publication state via an AJAX state selector"
 FLEXI_STATE_ICON="State icon"
-FLEXI_ENABLE_COMMENTS_DESC="Enable the commenting system by default. This parameter may be overriden for menu items or single items."
-FLEXI_ENABLE_COMMENTS="Enable comments"
+
+; Comments integration
+FLEXI_ENABLE_COMMENTS_INTEGRATION_DESC="Enable commenting system integration. <br/><br/><b>NOTE:</b> This parameter may be overriden for types, categories, single items or menu items. <br/><br/><b>NOTE:</b> By setting to disable you may manually trigger (description field will trigger all by default), appropriate Joomla content plugin of your commenting system to insert comments via a Joomla CONTENT Event. In case of adding comments this way, you cannot use the parameter 'Disable comments' in the item form, instead you will need to do it the way your commenting system recommends, e.g. by inserting some special text inside the description"
+FLEXI_ENABLE_COMMENTS_INTEGRATION="Enable comments integration"
+FLEXI_MANUAL_COMMENTS_INTEGRATION="Manual comments integration"
+FLEXI_DISABLE_OR_INTEGRATE_MANUALLY="Disable or integrate manually"
+FLEXI_COMMENTS_BACKEND_ADMIN_LINK_DESC="If you add comments manually (e.g. by triggering a Joomla plugin), then you can add the full link to the backend administration of the component, so that you integrate it, into the FLEXIcontent dashboard"
+FLEXI_COMMENTS_BACKEND_ADMIN_LINK="Backend administration link"
+FLEXI_JCOMMENTS_MISSING="JComments missing"
+
 FLEXI_ENABLE_FLASH_UPLOADER_DESC="Enable the Flash uploader or use the simple upload method"
 FLEXI_ENABLE_FLASH_UPLOADER="Enable Flash uploader"
 FLEXI_DISPLAY_FILE_LANG_AS_DESC="Select appearance/behavior of the file language"
@@ -586,8 +594,7 @@ FLEXI_IGNORED_EXTENSIONS_LABEL="Ignored Extensions"
 FLEXI_ILLEGAL_MIME_TYPES_DESC="A comma separated list of illegal MIME types for upload (blacklist)"
 FLEXI_ILLEGAL_MIME_TYPES="Illegal MIME Types"
 FLEXI_INTRO_TEXT="Intro text"
-FLEXI_JCOMMENTS="JComment (recommended)"
-FLEXI_JOMCOMMENTS="JomComment"
+FLEXI_JCOMMENTS_INTEGRATION="JComments"
 FLEXI_LEGAL_EXTENSIONS_DESC="Extensions (file types) you are allowed to upload (comma separated)."
 FLEXI_LEGAL_EXTENSIONS_LABEL="Legal Extensions (File Types)"
 FLEXI_LEGAL_IMAGE_EXTENSIONS_DESC="Image Extensions (file types) you are allowed to upload (comma separated). These are used to check for valid image headers."
@@ -823,8 +830,8 @@ FLEXI_DASH_MODAL_ITEM_EDIT="Edit items in popup window"
 FLEXI_DASH_MODAL_ITEM_EDIT_DESC="Slider item links will open edit form in modal popup window"
 FLEXI_DASH_DISABLE_FC_LOGO="Disable FLEXIcontent logo"
 FLEXI_DASH_DISABLE_FC_LOGO_DESC="You can hide the FLEXIcontent image, the license and copyright text will still be visible"
-FLEXI_DASH_HIDE_FC_LICENSE="Hide FLEXIcontent license"
-FLEXI_DASH_HIDE_FC_LICENSE_DESC="Hide the license by placing it inside the dashboard sliders"
+FLEXI_DASH_HIDE_FC_LICENSE_AND_CREDITS="Hide license and credits"
+FLEXI_DASH_HIDE_FC_LICENSE_AND_CREDITS_DESC="Hide the license by placing it inside the dashboard sliders"
 FLEXI_IN_SLIDER="In slider"
 
 
