^ Continued work for cleaner backend manager listings UI

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -71,6 +71,7 @@ FLEXI_PUBLISHED_DESC="Published"
 FLEXI_PUBLISH_INFORMATION="Publish information"
 FLEXI_PUBLISH_THIS_ITEM="Set state as : published"
 FLEXI_RESET="Reset"
+FLEXI_CLEAR="Clear"
 FLEXI_SEARCH="Search"
 FLEXI_SET_ITEM_IN_PROGRESS="Set state as : in progress"
 FLEXI_SET_ITEM_PENDING="Set state as : waiting for approval"
@@ -161,8 +162,9 @@ FLEXI_LIST_ITEMS_WITH_STATE="Items with state"
 FLEXI_LIST_ITEMS_WITH_STATE_DESC="NOTE: normal states exclude archived and trashed states and include all others"
 FLEXI_LIST_ITEMS_IN_CATS="Items with category state"
 FLEXI_LIST_ITEMS_IN_CATS_DESC="NOTE: an item may belong to more than 1 categories, thus it maybe listed BOTH in published categories and unpublished categories"
-FLEXI_REMOVE_THIS_FILTER="Remove filter"
-FLEXI_REMOVE_THIS_FILTER_DESC="Active filter!::Click on the icon to remove this filter"
+FLEXI_REMOVE_FILTER="Remove filter"
+FLEXI_ACTIVE_FILTER="Active filter"
+FLEXI_CLICK_TO_REMOVE_THIS_FILTER="Click on the icon to remove this filter"
 FLEXI_APPLY_FILTERS="Apply filters"
 FLEXI_RESET_FILTERS="Reset all filters"
 FLEXI_HIDE_FILTERS="Hide filters"
@@ -2244,7 +2246,7 @@ FLEXI_ORDER_FLEXICONTENT="FLEXIcontent"
 FLEXI_ORDER_CONTENT_TYPE="Type"
 FLEXI_ORDER_TYPE="Order Type"
 
-FLEXI_ITEM_ORDER_EXPLANATION_TIP="<br/><br/><b>NOTE:</b><br/> -- FLEXIcontent order is grouped <br/>(a) per ITEM category (items are assigned to multiple categories) <br/>(b) per state (published states, unpublished states, archived, trashed) <br/>(c) per language <br/> ... and is used in FLEXIcontent views <br/><br/> -- Joomla order is grouped <br/> (a) per MAIN category ONLY <br/> (b) per state (published states, unpublished states, archived, trashed) <br/>(c) per language (for J1.7+) <br/> ... and can be used by non FLEXIcontent modules/views (3rd party extensions) <br/><br/><b>NOTE:</b><br/> -- If <b>duplicate</b> ordering are detected in an ordering group, then an automatic reordering is done, <br/> -- <b>negative</b> ordering numbers are not subject to automatic reordering and can be used to create 'sticky' items that are always placed at top of item lists"
+FLEXI_ITEM_ORDER_EXPLANATION_TIP="<br/><br/><b>NOTE:</b><br/> -- FLEXIcontent order is grouped <br/>(a) per ITEM category (items are assigned to multiple categories) <br/>(b) per state (published states, unpublished states, archived, trashed) <br/>(c) per language <br/> ... and is used in FLEXIcontent views <br/><br/> -- Joomla order is grouped <br/> (a) per MAIN category ONLY <br/> (b) per state (published states, unpublished states, archived, trashed) <br/>(c) per language <br/> ... and can be used by non FLEXIcontent modules/views (3rd party extensions) <br/><br/><b>NOTE:</b><br/> -- If <b>duplicate</b> ordering are detected in an ordering group, then an automatic reordering is done, <br/> -- <b>negative</b> ordering numbers are not subject to automatic reordering and can be used to create 'sticky' items that are always placed at top of item lists"
 FLEXI_ITEM_REORDER_GROUP_RESULTS="%s ordering :: Reordered items in  -- %s -- STATE(s) and assigned to Category -- %s --"
 FLEXI_ITEM_REORDER_GROUP_RESULTS_LANG="%s ordering :: Reordered items in -- %s -- STATE(s) and with language -- %s -- and assigned to Category -- %s --"
 FLEXI_MOVE_WITHIN_ORDERING_GROUPS_LIMITS="Please move within ordering group limits. Operation canceled"
@@ -2618,6 +2620,8 @@ FLEXI_PREVIEW_FORM_LOADED_VERSION="Preview Form Loaded"
 FLEXI_PREVIEW_FRONTEND_ACTIVE_VERSION="Preview Frontend Active"
 FLEXI_PREVIEW_LATEST_SAVED_VERSION="Preview Latest Saved"
 FLEXI_EDIT_ASSOC_TRANSLATION="Edit associated translation"
+FLEXI_OUTDATED="Outdated"
+FLEXI_UPTODATE="Up-to-date"
 FLEXI_ASSOC_TRANSLATIONS="Associated translations"
 
 ; some error messages
