^ Cleaned up UI for backend filemanager view

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -322,19 +322,24 @@ FLEXI_UPLOAD_TIME="Upload time"
 FLEXI_ADD_FILE="Add file"
 FLEXI_ADD_FILE_BY_URL="Add file by URL"
 FLEXI_ADD_FILE_FROM_SERVER="Add file(s) from server"
-FLEXI_CHOOSE_DIR="Choose target directory::If you select secure, the users will never see the real path to you file. This option is suitable for files to download. If you select media you will be able to play media files on your site. As they are processed by the system choose secure for the image files.Only their thumbnails will be accessible and you will keep the secure download feature."
+FLEXI_CHOOSE_DIRECTORY="Choose target directory"
+FLEXI_CHOOSE_DIRECTORY_DESC="If you select secure, the users will never see the real path of the file and will only be allowed <b>indirect access</b> to the file. <br/>This option is suitable for e.g. <br/> - document files * <br/> - high resolution copyrighted images *<br/> * attach to content via <b>FILE</b> field<br/> ** attach to content via  <b>FILE</b> field or <b>image/gallery</b> field <br/><br/>NOTE: <br/>1. If you select media folder, then direct access will be allowed thus you will be able to play media files via media players embedded in visitor's browser. <br/><br/>2. Image files in the secure folder can be either privileged accessed via file field or viewable by (optionally watermarked) thumbnails created by the image/gallery field and you will still keep the secure download feature."
 FLEXI_CHOOSE_FILE="Choose a file"
+FLEXI_CHOOSE_FILE_DESC="Please take note of the upload limits"
 FLEXI_COMING_SOON="Coming soon ;-)"
-FLEXI_FILEEXT="Extension (ex: jpg)"
+FLEXI_FILEEXT_MIME="MIME type <small>(example: jpg)</small>"
+FLEXI_FILEEXT_MIME_DESC="This maybe used for filtering filemanager / file-element listings, it is reported to the user's browser when VIEWing instead of downloading and may allow user browser to call proper viewer, also for known file types an icon maybe displayed too"
 FLEXI_FILE_DIRECTORY="Choose target directory"
 FLEXI_FILE_URL="File URL"
-FLEXI_MAX="Max size :"
+FLEXI_FILE_URL_DESC="Enter an absolute file URL"
+FLEXI_UPLOAD_LIMITS="Upload limits"
 FLEXI_SIZE="Size"
 FLEXI_START_UPLOAD="Start upload"
 FLEXI_UPLOAD_LOCAL_FILE="Upload local file"
 FLEXI_ALL_DIRECTORIES="Select directory"
 FLEXI_ALL_FILES="Select file type"
-FLEXI_FILE_TITLE="File title"
+FLEXI_FILE_DISPLAY_TITLE="Title"
+FLEXI_FILE_DISPLAY_TITLE_DESC="Displayed instead of filename"
 FLEXI_FILE="File"
 FLEXI_FILENAME="File name"
 FLEXI_ORIGINAL_FILENAME="Original file name"
@@ -349,15 +354,24 @@ FLEXI_THUMB="Thumb"
 FLEXI_FILES="file(s)"
 FLEXI_IMAGES="image(s)"
 FLEXI_YOUR_ACCOUNT_CANNOT_UPLOAD="Your account does not have privelege to upload new files"
+FLEXI_USAGE_IN="Usage in"
+FLEXI_REAL_PATH="Real path"
 
-; Files screen (added beta4)
-FLEXI_CHOOSE_DIR_PATH="Select source directory"
-FLEXI_CHOOSE_DIR_PATH_DESC="Select source directory::Enter the path of the source directory from you joomla root. For security reasons, it must be within your joomla directory."
+FLEXI_CHOOSE_SRC_DIR="Select source directory"
+FLEXI_CHOOSE_SRC_DIR_DESC="Enter the path of the source directory from you joomla root. For security reasons, it must be within your joomla directory."
 FLEXI_ADD_DIR="Add files from directory"
 FLEXI_FILE_FILTER_EXT="Specific extensions"
 FLEXI_FILE_FILTER_EXT_DESC="You can specify a comma separated list of the allowed extensions here. Only the files from this type will be added(for example: doc,xls,zip). If you don't specify anything here the allowed extension list from the component global configuration will be used."
 FLEXI_FILE_FILTER_REGEX="Regular expression"
 FLEXI_FILE_FILTER_REGEX_DESC="For advanced users only!!! You can specify here a pattern (without delimiters!) to filter the added files."
+FLEXI_FILE_LANGUAGE_DESC="You may want to set file language, e.g. if file is a document in specific language, or media that contains audio or text in specific language"
+FLEXI_FILE_DESCRIPTION_DESC="This can be used by some fields, e.g. it can be optionally displayed (inline, tooltip, etc) by the file field"
+
+FLEXI_UPLOAD_LIMITS="Upload limits"
+FLEXI_CONF_UPLOAD_MAX_LIMIT="Configuration maximum"
+FLEXI_CONF_UPLOAD_MAX_LIMIT_DESC="Component configuration is limiting your upload to this value"
+FLEXI_SERVER_UPLOAD_MAX_LIMIT="Server maximum"
+FLEXI_SERVER_UPLOAD_MAX_LIMIT_DESC="Server PHP configuration variable '%s' is limiting your upload to this value"
 
 ; Statistics screen
 FLEXI_BEST_RATED="Best rated"
@@ -1479,6 +1493,7 @@ FLEXI_IMPORT_FILE="Import File"
 FLEXI_CSVFILE="CSV File"
 
 ; filemanager and fileselement view, maybe elsewhere too
+FLEXI_FILE_NOT_FOUND="File not found"
 FLEXI_FILTER_BY_ITEM="Filter by item"
 FLEXI_SINGLE_MULTIPLE_UPLOADER="Single/Multiple Uploader"
 FLEXI_NOT_AN_IMAGE_FILE="Not an image file, <br/>or file is corrupted"
