# Continued work on backend managers, moved clearing filters and go button next to text search, added toggle buttons "Upload" and "Why" in filemanager

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -73,6 +73,7 @@ FLEXI_PUBLISH_THIS_ITEM="Set state as : published"
 FLEXI_RESET="Reset"
 FLEXI_CLEAR="Clear"
 FLEXI_SEARCH="Search"
+FLEXI_SEARCH_TEXT_INSIDE="Search text inside"
 FLEXI_SET_ITEM_IN_PROGRESS="Set state as : in progress"
 FLEXI_SET_ITEM_PENDING="Set state as : waiting for approval"
 FLEXI_SET_ITEM_TO_WRITE="Set state as : draft"
@@ -317,6 +318,7 @@ MEDIA="Media"
 SECURE="Secure"
 FLEXI_MEDIA_DIR="Media"
 FLEXI_SECURE_DIR="Secure"
+FLEXI_NEW_FILE="New file"
 FLEXI_UPLOADER="Uploader"
 FLEXI_UPLOAD_TIME="Upload time"
 FLEXI_ADD_FILE="Add file"
@@ -332,7 +334,6 @@ FLEXI_FILEEXT_MIME_DESC="This maybe used for filtering filemanager / file-elemen
 FLEXI_FILE_DIRECTORY="Choose target directory"
 FLEXI_FILE_URL="File URL"
 FLEXI_FILE_URL_DESC="Enter an absolute file URL"
-FLEXI_UPLOAD_LIMITS="Upload limits"
 FLEXI_SIZE="Size"
 FLEXI_START_UPLOAD="Start upload"
 FLEXI_UPLOAD_LOCAL_FILE="Upload local file"
@@ -3032,6 +3033,9 @@ FLEXI_IMAGE="Image"
 FLEXI_BUTTON="Button"
 FLEXI_HORIZONTAL="Horizontal"
 FLEXI_VERTICAL="Vertical"
+FLEXI_BE_NEW="New"
+FLEXI_UPLOAD="Upload"
+FLEXI_WHY="Why"
 
 FLEXI_DISPLAY_FEATURED_ITEMS="Include / exclude items marked as featured"
 FLEXI_DISPLAY_FEATURED_ITEMS_DESC="Some of the category items are flagged as featured. Select here to include / exclude these from the item list"
