# A fix for version loading in item form and fixed address international field broken due to recent parent field class changes

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -133,7 +133,7 @@ FLEXI_NOCHANGE_LANGUAGE_DESC="Do not change change the language of the copied it
 FLEXI_DO_NOT_CHANGE="Do not change"
 FLEXI_FLAG="Flag"
 FLEXI_BIND="Bind"
-FLEXI_UNASSOCIATED_WARNING="The system has detected that some items are not yet bound to their extended data. Either you have just import them from Joomla!'s com_content or you changed the content section in the global configuration.<br /><strong>IMPORTANT!!!</strong> This process may consume a lot of server resources depending on the number and the size of your contents. To avoid timeouts <strong>use a reasonable value</strong> according to your server capacity and the number of items to bind."
+FLEXI_UNASSOCIATED_WARNING="The system has detected that some items are not yet bound to their extended data. <br/>This process may consume a lot of server resources depending on the number and the size of your contents. <br/>-- To avoid timeouts use a reasonable value according to your server capacity and the number of items to bind."
 FLEXI_BIND_FAILED="All/some items were not successfully bound."
 FLEXI_BIND_SUCCESSFUL="These items were successfully bound to their extended data."
 FLEXI_ITEMS_TO_BIND="items to bind"
