+ Added support for images and files in subfolders during import process

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2978,6 +2978,7 @@ FLEXI_IMPORT_FOLDERS="Media / document Folders"
 FLEXI_IMPORT_MEDIA_FOLDER="Media Folder <br/><small>(used by image/gallery fields, etc)</small>"
 FLEXI_IMPORT_DOCUMENTS_FOLDER="Document Folder <br/><small>(used by file fields, etc)</small>"
 FLEXI_IMPORT_FOLDER_DESC="Please enter a relative path e.g. <br/> <b>tmp/foldername</b> ... inside your Joomla installation folder <br/> <b>../foldername</b> ... just above Joomla installation folder"
+FLEXI_IMPORT_FILE_IN_SUBFOLDER_DESC="Files can be in subfolder, e.g. for 'tmp/foldername/field55/dd.jpg', <br/>use filename: 'field55/dd.jpg'"
 
 ; Some generic names, used in CSV import and maybe elsewhere
 FLEXI_CREATION_DATE="Creation date"
