--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -1913,6 +1913,9 @@ FLEXI_GRP_ORPHAN="Orphan"
 FLEXI_GRP_ALL="All"
 FLEXI_LISTING_RECORDS="Listing records"
 
+FLEXI_SINGLE_STATUS="Single status"
+FLEXI_STATUS_GROUPS="Status groups"
+
 FLEXI_TRASHED_STATE="Trashed"
 FLEXI_TRASHED_TO_BE_DELETED="In Trash, to be deleted"
 FLEXI_TRASH_THIS_ITEM="Set state as : trashed"
