+ Restructured field configuration to make cleaner and more easy, adding 2 tab-sets (common field properties and field-specific parameters), TODO update XML files of field to have multiple fieldset and thus multiple TABs, also updated jQuery inputmask fixing mask and regex support and adding placeholder too

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2412,7 +2412,7 @@ FLEXI_FIELDS_TOGGLED_PROPERTY_FIELDS_SKIPPED="Skipped - %d - Field(s), (%d) due 
 ;
 FLEXI_BASIC_INDEX_S="Basic Search Index"
 FLEXI_BASIC_INDEX="Basic Search Index: <small>1 record per item </small>"
-FLEXI_BASIC_INDEX_NOTES="<small>Used in (category, etc) content lists, and optionally in search view</small>"
+FLEXI_BASIC_INDEX_NOTES="Used in (category, etc) content lists, and optionally in search view"
 FLEXI_FIELD_CONTENT_LIST_TEXT_SEARCHABLE="Text Search"
 FLEXI_FIELD_CONTENT_LIST_TEXT_SEARCHABLE_DESC="Field values will be <b>searchable via a Text Search Box</b> in content lists. <br/><br/> -- For this purpose, field's (text) value will be added to the basic search index of each Content item. <br/><br/> -- Basic search index uses one RECORD per Content Item, thus appending all text searchable field values into a single TEXT record"
 FLEXI_FIELD_CONTENT_LIST_FILTERABLE="Filter"
@@ -2421,7 +2421,7 @@ FLEXI_FIELD_CONTENT_LIST_FILTERABLE_DESC="Field will be <b>available as filter f
 FLEXI_ADVANCED_SEARCH_VIEW="Advanced Search View"
 FLEXI_ADV_INDEX_S="Advanced Search Index"
 FLEXI_ADV_INDEX="Advanced Search Index: <small>1 record per field value</small>"
-FLEXI_ADV_INDEX_NOTES="<small>Optionally used in search view</small>"
+FLEXI_ADV_INDEX_NOTES="Optionally used in search view"
 FLEXI_FIELD_ADVANCED_TEXT_SEARCHABLE="Text Search"
 FLEXI_FIELD_ADVANCED_TEXT_SEARCHABLE_DESC="Field values will be <b>searchable via a Text Search Box</b> in search view. <br/><br/> -- For this purpose, field's (text) value will be added to an advanced search index. <br/><br/> -- Advanced search index uses one RECORD per field value, thus making possible to limit text search to a subset of text searchable fields"
 FLEXI_FIELD_ADVANCED_FILTERABLE="Filter"
@@ -2464,6 +2464,8 @@ FLEXI_FIELD_SINGLE_VALUE_SUFFIX_TEXT="Suffix text of the value"
 FLEXI_FIELD_SINGLE_VALUE_SUFFIX_TEXT_DESC="This text is placed immediately <b>after</b> the field value"
 FLEXI_FIELD_EXTRA_ATTRIBUTES="Field attributes"
 FLEXI_FIELD_EXTRA_ATTRIBUTES_DESC="Here you can enter some extra attibutes (HTML Tag Parameters) for the form field like e.g. onkeypress='...' onmouseover='...' somename='somevalue'. Take care not to break the the HTML syntax of the form field"
+FLEXI_FIELD_PLACEHOLDER="Placeholder"
+FLEXI_FIELD_PLACEHOLDER_DESC="A word / short text inside the input visible before user starts typing"
 
 FLEXI_FIELD_ALTERNATIVE_DISPLAY="Alternative Display"
 FLEXI_FIELD_NUMBER_OF_VALUES="Number of values"
@@ -2629,8 +2631,8 @@ FLEXI_VALUE_MASK_VALIDATE_CONF="Input value Masking & Validation"
 FLEXI_VALUE_MASK_VALIDATE_CONF_DESC="Parameters for both masking and validating user input"
 FLEXI_VALUE_VALIDATION_MASK="Value Validation Mask <br/><small>(Predefined Set)</small>"
 FLEXI_VALUE_VALIDATION_MASK_DESC="Select a validation mask from a predefined list of masks to be used during user input"
-FLEXI_VALUE_VALIDATION_MASK_CUSTOM="Value Validation Mask <br/><small>(Custom)</small>"
-FLEXI_VALUE_VALIDATION_MASK_CUSTOM_DESC="(Developers only) Please enter a custom validation mask to be used during user input. This should be the RAW value of data-inputmask TAG parameter of the HTML input field. Please read documentation and source code of jquery.inputmask JS library before using, e.g. <br/> 'alias': 'url' <br/> 'mask': '9', 'repeat' : '10' "
+FLEXI_VALUE_VALIDATION_CUSTOM_MASK="Custom mask"
+FLEXI_VALUE_VALIDATION_CUSTOM_MASK_DESC="Please enter a custom validation mask to be used during user input. This should be the RAW value of data-inputmask TAG parameter of the HTML input field. Please read documentation and source code of jquery.inputmask JS library before using, e.g. <br/> 'alias': 'url' <br/> 'alias': 'date' <br/> 'mask': '9', 'repeat' : '10', 'greedy': false <br/> 'mask': '99-9999999'"
 
 FLEXI_NO_MASK="No Masking"
 FLEXI_CUSTOM_MASK_ENTER_BELOW="-CUSTOM- Mask (enter below)"
@@ -3095,6 +3097,11 @@ FLEXI_CUSTOM_MODULE_PER_ITEM_DESC="You can - try - to customize some module para
 ; Field groups
 FLEXI_USE_IN_FIELD_GROUP="Use field in a group"
 FLEXI_USE_IN_FIELD_GROUP_DESC="Enable to allow field to be part of field group, that is created via 'Field Group' field. NOTE: You should then select this field in ONLY ONE field group"
+
+; Fields
+FLEXI_FIELD_EDITING="Editing"
+FLEXI_FIELD_VIEWING="Viewing"
+FLEXI_FIELD_SEARCH_FILTERING="Search, filtering"
 
 ; Navigation sidebar
 FLEXI_NAV_SD_CONTENT_EDITING="Content editing"
