# Updated fields radio, radioimage, checkbox, checkboximage, select, selectmultiple, addressint, text, weblink to use new parameter layout for field form

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -1859,6 +1859,8 @@ FLEXI_PDF_FORMAT_FIELDS="PDF displayed fields"
 FLEXI_PDF_FORMAT_FIELDS_DESC="Optionally include core/custom fields columns into the pdf view <br/><br/><b>NOTE:</b>If you set this list, you will need to include '<b>maintext</b>' in the list.<br/><br/><b>NOTE:</b> Some fields will cause problems and break the PDF view, in such a case try using a more friendly display variable (default is 'display') OR remove them from the list.<br/><br/><b>FORMAT:</b> fieldname1, fieldname2, fieldname3:dispname3, fieldname4:dispname4, fieldname5"
 
 FLEXI_BASIC_PARAMS_LABEL="Basic Configuration"
+FLEXI_FIELD_VALUES="Values"
+FLEXI_FIELD_LABEL_AND_ACCESS="Label and access"
 FLEXI_VALUE_CREATION_LABEL="Values Creation"
 FLEXI_PREFIX_SUFFIX_SEPARATOR_LABEL="Prefix - Suffix - Separator"
 FLEXI_DISPLAY_PARAMS_LABEL="Display Configuration"
