^ More work on new field configuration Layout/UI, also update more XML files of fields

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2078,6 +2078,8 @@ FLEXI_FIELD_ENABLE_IN_VIEWS="Enable above in views"
 FLEXI_FIELD_ENABLE_IN_VIEWS_DESC="You can turn on/off the above parameter depending on current flexicontent view"
 
 ; OGP Support
+FLEXI_SOCIAL="Social"
+FLEXI_SOCIAL_NETWORKING="Social Networking"
 FLEXI_SOCIAL_SUPPORT="Social websites support (e.g. Facebook)"
 FLEXI_SOCIAL_SUPPORT_IMG_DESC="Configure how this image is handled by social websites that support OGP, e.g. whether and how it appears to Facebook image listing for selecting content's image"
 FLEXI_SOCIAL_SUPPORT_TXT_DESC="Configure how this text is handled by social websites that support OGP, e.g. whether and how it appears to Facebook as description"
