^ More backend UI updates, updates for the template manager layout, to make it easier to use and more clean

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -230,6 +230,7 @@ FLEXI_PARAMETERS="Parameters"
 FLEXI_ADD_TYPE="New type"
 
 ; Categories screen
+FLEXI_ITEM="Item"
 FLEXI_CATEGORY="Category"
 FLEXI_ITEMS_ASSIGNED="Items assigned"
 ; Category screen (added beta4)
@@ -866,7 +867,7 @@ COM_FLEXICONTENT="FLEXIcontent"
 FLEXICONTENT="FLEXIcontent"
 FLEXICONTENT_ITEM_DESC="In this screen you can select a single content item for your menuitem. The parameters and templates are set either in the type view or directly in the item view."
 FLEXICONTENT_ITEM_TIP="Add a link to a single content item"
-FLEXICONTENT_ITEM="Single item."
+FLEXICONTENT_ITEM="Single item"
 FLEXICONTENT_CATEGORY_DESC="List Items assigned to a <b>specific Category</b>.<br/> <small>Parameters used are (in order of override): (a) global component parameters, (b) specified category parameters, (c) active menu parameters for category -view- (if override is enabled)</small>"
 FLEXICONTENT_CATEGORY_TIP="Link to all items assigned to a specific category"
 FLEXICONTENT_CATEGORY="Category"
@@ -1060,6 +1061,10 @@ FLEXI_SELECT_TAG="Select a tag"
 FLEXI_TAG="Tag"
 
 ; Template parameters ##################################
+FLEXI_SINGLE_ITEM_LAYOUT="Single item LAYOUT"
+FLEXI_SINGLE_ITEM_LAYOUT_USAGE="Click to edit the fields displayed in single item view (=CONTENT ITEM) by this template. <br><br><b>NOTE:</b><br/> This is selectable in (item) Type configuration, optionally you can override and select a different template in every item"
+FLEXI_CONTENT_LIST_LAYOUT="Content (item) list LAYOUT"
+FLEXI_CONTENT_LIST_LAYOUT_USAGE="Click to edit the fields displayed in multi-item lists (=CONTENT LISTs) by this template. <br><br><b>NOTE:</b><br/> This is selectable in category configuration, and in other content listing views (except search view)"
 
 ; Blog item
 FLEXI_SHOWAUTHOR_DESC="Show/Hide the item author."
@@ -2228,6 +2233,8 @@ FLEXI_ITEMS_LIST_CREATION_CONF="Items List Creation"
 FLEXI_ITEM_FILTERING_CONF="Alpha-Index, Search, Filters"
 FLEXI_USED_IN_ITEM_VIEW_ONLY="Used in Item view only"
 FLEXI_ITEM_VIEW="Item view"
+FLEXI_SINGLE_CONTENT="Single Content"
+FLEXI_CONTENT_LISTS="Content Lists"
 FLEXI_VARIOUS_VIEWS="Various views"
 FLEXI_FIELD_MODULE_STYLE="Module chrome style <br/><small>module chrome defines container html/css to use</small>"
 FLEXI_FIELD_MODULE_STYLE_DESC="Set a module chrome style (container) for your module <br/><br/><b>NOTE:</b><br/>Joomla standard chrome styles are: rounded,none,table,horz,xhtml, <br/><br/><b>NOTE:</b><br/>Your Joomla Template may have more,<br/><br/>-- to <b>find these</b>, open file:<br/> PATH_TO_JOOMLA/templates/TEMPLATE_NAME/html/modules.php<br/><br/> and check for function names like:<br/> modChrome_STYLE()<br/> <b>STYLE</b> is the extra module chrome styles available ..."
@@ -3047,6 +3054,7 @@ FLEXI_VERTICAL="Vertical"
 FLEXI_BE_NEW="New"
 FLEXI_UPLOAD="Upload"
 FLEXI_WHY="Why"
+FLEXI_HOW_TO="How to"
 
 FLEXI_DISPLAY_FEATURED_ITEMS="Include / exclude items marked as featured"
 FLEXI_DISPLAY_FEATURED_ITEMS_DESC="Some of the category items are flagged as featured. Select here to include / exclude these from the item list"
