# Minor cleanups for backend views, added icons class parameter for frontend item form TABs, some restructuring for backend item form

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -36,6 +36,8 @@ FLEXI_SUPPORT="Help"
 FLEXI_TO_WRITE="Draft :: Unpublished"
 
 ; Items screen
+FLEXI_ASSOCIATONS="Associations"
+FLEXI_ASSIGNMENT="Assignment"
 FLEXI_ACCESS="Access"
 FLEXI_APPROVAL_REQUEST="Approval request"
 FLEXI_APPROVAL_MESSAGE="Hello %s,\n\nThe user %s (username : %s) require the following item to be published :\n\nId         : %s\nTitle      : %s\nCategory   : %s\nLink       : %s\n\nPlease revise it as soon as possible."
@@ -1139,7 +1141,7 @@ FLEXI_ORDER_CONFIGURED_ORDER="Ordering in current category"
 FLEXI_EDIT_ACL="Permissions"
 FLEXI_RIGHTS_MANAGEMENT="Manage permissions"
 FLEXI_RIGHTS_MANAGEMENT_DESC="Click on the arrow above to view the permissions table."
-FLEXI_CATEGORIES_NOTES="The main category will be used for permissions heritance and URL rewriting. To select multiple categories, press down and hold the CTRL/CMD key while selecting them (the main category will be also added to the categories if it doesn't already belong to the list)."
+FLEXI_SEC_FEAT_CATEGORIES_NOTES="The category will be used for permissions heritance and URL creation. If you have appropriate privilege then you can also select secondary and/or featured categories in the assignments TAB"
 FLEXI_DATE_FORMAT_FLEXI_VERSIONS_J16GE="d/M H:i"
 FLEXI_DATE_FORMAT_FLEXI_ITEMS_J16GE="d/m/y H:i"
 FLEXI_DATE_FORMAT_FLEXI_VERSIONS="%d/%m %H:%M"
@@ -2778,6 +2780,8 @@ FLEXI_HANDLED_BY_FIELDS_MANAGER_DESC="Fields added here will be placed by the fi
 FLEXI_COMMA_LIST_OF_CORE_FIELDS_PROPS="Enter a comma separated list of core fields or core property field"
 FLEXI_FORM_TAB_TITLES="Tab titles"
 FLEXI_FORM_TAB_TITLES_DESC="A comma separated list of every tab's name and its language, like: tab_number:language_string, e.g. <br/> 1:FLEXI_BASIC, 2:FLEXI_DESCRIPTION, 3:__TYPE_NAME__, 4:FLEXI_PUBLISHING, 5:FLEXI_META_SEO, 6:FLEXI_DISPLAYING, 7:FLEXI_TEMPLATE"
+FLEXI_FORM_TAB_ICONS="Tab icons"
+FLEXI_FORM_TAB_ICONS_DESC="A comma separated list of css class name for icons, like: tab_number:css_class_name, e.g. <br/> 1:icon-file-2, 2:icon-tree-2, 3:icon-signup, 4:icon-calendar, 5:icon-bookmark, 6:icon-eye-open, 7:icon-palette"
 
 FLEXI_CUSTOM_FIELDS_FORM_TAB="Custom fields ('Item Type') TAB"
 FLEXI_CUSTOM_FIELDS_FORM_TAB_DESC="Custom fields that depend on content type, and core fields that are placed via fields manager placement can appear inside a custom fields TAB"
