^ Updated more fields to new configuratiob layout

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -355,6 +355,7 @@ FLEXI_ADD_NAME_TAG="Please enter a display name"
 FLEXI_EDIT_FILE="Edit file"
 FLEXI_SELECT="Click to select"
 FLEXI_THUMB="Thumb"
+FLEXI_THUMBNAILS="Thumbnails"
 FLEXI_FILES="file(s)"
 FLEXI_IMAGES="image(s)"
 FLEXI_YOUR_ACCOUNT_CANNOT_UPLOAD="Your account does not have privelege to upload new files"
